# storage/api-docs/api-docs.json
@@ -1041,6 +1041,103 @@
                     }
                 }
             }
+        },
+        "/api/search": {
+            "get": {
+                "tags": [
+                    "post"
+                ],
+                "summary": "게시글 검색",
+                "description": "사용자의 검색내용을 띄워쓰기를 - 로 붙여서 보내면(url에 띄어쓰기가 안되니까), 백엔드에서는 다시 - 를 기준으로 띄워서 배열을 만들고 그 배열의 값중 하나라도 포함하면 응답에 포함함",
+                "operationId": "dd3e6c0246da94578414c41ba0bc227e",
+                "parameters": [
+                    {
+                        "name": "category",
+                        "in": "query",
+                        "description": "게시판 카테고리",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "자유게시판, 축제게시판, 공지사항"
+                        }
+                    },
+                    {
+                        "name": "content",
+                        "in": "query",
+                        "description": "검색내용; 반드시 띄워쓰기를 - 로 바꿔서 넣을것",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "안녕하세요-감사해요-잘있어요-다시만나요"
+                        }
+                    },
+                    {
+                        "name": "target",
+                        "in": "query",
+                        "description": "검색대상; 제목,내용,작성자중의 하나를 골라야함",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "title, content, author"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "게시글 배열들",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 2
+                                                    },
+                                                    "title": {
+                                                        "type": "string",
+                                                        "example": "Prof."
+                                                    },
+                                                    "content": {
+                                                        "type": "string",
+                                                        "example": "Sunt excepturi ad officiis laudantium."
+                                                    },
+                                                    "author": {
+                                                        "type": "string",
+                                                        "example": "rylan65"
+                                                    },
+                                                    "category": {
+                                                        "type": "string",
+                                                        "example": "자유게시판"
+                                                    },
+                                                    "createdAt": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2024-09-30T05:45:46.000000Z"
+                                                    },
+                                                    "updatedAt": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2024-09-30T05:45:46.000000Z"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "쿼리중 특정 값이 잘못된 경우; title이 없다거나, target이 title,author,content 중 하나여야 하는데 다른 값이 들어갔거나, content가 없거나..."
+                    }
+                }
+            }
         }
     },
     "tags": [
